--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">奖项</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="https://media.lvxiang.site/file/吕祥的简历.pdf">简历下载</a>
+        </li>
       </ul>
     </div>
   </nav>
