--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a class="nav-link js-scroll-trigger" href="#awards">奖项</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://media.lvxiang.site/file/吕祥的简历.pdf">简历下载</a>
+          <a class="nav-link js-scroll-trigger" href="https://media.lvxiang.site/file/吕祥的简历2020.pdf">简历下载</a>
         </li>
       </ul>
     </div>
